# CrewAI_DockerAgent

./: .env.example  .gitignore  Dockerfile  build.ps1  config.yaml  gate.sh  init.sh  rebuild.ps1  run.ps1  shell.ps1
volumes/ai/autocoder/: .env.example
volumes/ai/autocoder/src/autocoder/config/: agents.yaml  tasks.yaml
volumes/autocoder/: README.md  pyproject.toml
volumes/autocoder/src/autocoder/: crew.py  main.py
volumes/autocoder/src/autocoder/tools/: custom_tool.py
vscode/: init.sh
vscode/.config/configstore/update-notifier-@google/: gemini-cli.json
