[project]
name = "autocoder"
version = "0.1.0"
description = "AutoCoder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
autocoder = "autocoder.main:run"
run_crew = "autocoder.main:run"
train = "autocoder.main:train"
replay = "autocoder.main:replay"
test = "autocoder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
